--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.12.3",
+    "connect-mongo": "^0.8.1",
     "express": "^4.12.3",
+    "express-session": "^1.11.2",
     "jade": "^1.9.2",
     "monk": "^1.0.1"
   }
