Fix db bug in user tests & Blog Home Page tests passed!

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "url": "https://github.com/metame/tdd-blog.git"
   },
   "scripts": {
-    "test": "mocha test"
+    "test": "mocha test && mocha test/users"
   },
   "devDependencies": {
     "mocha": "*",
